Fix mobile menu arrow SVGs not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -199,18 +199,14 @@ hr{
     background-color: #f9f9f9;
 }
 
-#secondaryMenuBtn::before{
-    content: url(/images/angle-left.svg);
+#secondaryMenuBtn svg{
     position: absolute;
     left: 20vw;
-    height: 32px;
 }
 
-#menu__btn::after{
-    content: url(/images/angle-right.svg);
-    display: grid;
-    border: none;
-    height: 32px;
+#menu__btn{
+    display: flex;
+    align-items: center;
 }
 
 #menu .divider{
